chore: link to app

--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -38,7 +38,7 @@
         </div>
         <div class="footerLeftB">
           <img src="/static/ios.png"></img>
-          <img src="/static/android.png"></img>
+          <a href="https://play.google.com/store/apps/details?id=com.validatedid.wallet"><img src="/static/android.png"></img></a>
         </div>
     </div>
     <div class="rightSide">
@@ -303,7 +303,7 @@
     }
     .footerLeftB{
       position: absolute;
-      left: 28%;
+      left: 27%;
       bottom: 5%;
     }
     .footerText{
@@ -329,7 +329,7 @@
 
     .qrImage {
       position: absolute;
-      right: 15%;
+      left: 65%;
       top: 30%;
     }
     .footerRight{
