--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -37,7 +37,7 @@
           <p class="footerText">You don't have the application yet? <br> Download it from your shop</p>
         </div>
         <div class="footerLeftB">
-          <img src="/static/ios.png"></img>
+          <a href="https://apps.apple.com/app/id1554340592#?platform=iphone"></a><img src="/static/ios.png"></img></a>
           <a href="https://play.google.com/store/apps/details?id=com.validatedid.wallet"><img src="/static/android.png"></img></a>
         </div>
     </div>
