--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -180,6 +180,16 @@
   </script>
 
   <style scoped>
+    @font-face {
+      font-family: 'TTNorms';
+      font-weight: 900;
+      src: local('TTNorms'), url(/static/fonts/TTNorms-Regular.otf) format('opentype');
+    }
+    @font-face {
+      font-family: 'TTNorms-Bold';
+      font-weight: 900;
+      src: local('TTNorms-Bold'), url(/static/fonts/TTNorms-Bold.otf) format('opentype');
+    }
     html{
       margin: 0 !important;
       padding: 0 !important;
@@ -214,6 +224,7 @@
       right: 5%;
       top: 5%;
       color: white;
+      font-family: 'TTNorms'
     }
 
     .logo {
@@ -240,16 +251,16 @@
 
     .title {
       position: absolute;
-      width: 30%;
+      width: 40%;
       left: 5%;
       top: 25%;
-      font-family: TT Norms;
       font-style: normal;
       font-weight: 800;
       font-size: 45px;
       line-height: 50px;
       /* or 111% */
       color: #F2F2F2;
+      font-family: 'TTNorms-Bold'
     }
     .subtitle {
       position: absolute;
@@ -263,6 +274,7 @@
       line-height: 25px;
       /* or 111% */
       color: #F2F2F2;
+      font-family: 'TTNorms'
     }
     
     .listCredentials {
@@ -273,6 +285,7 @@
       top: 48%;
       background: #F2F2F2;
       border-radius: 2px;
+      font-family: 'TTNorms';
     }
     @media only screen and (max-width: 768px) {
        .title{
@@ -310,7 +323,7 @@
       bottom: 5%;
     }
     .footerText{
-      font-family: TT Norms;
+      font-family: 'TTNorms';
       font-style: normal;
       font-weight: 500;
       font-size: 14px;
@@ -359,7 +372,7 @@
     }
 
     .nameClient {
-      font-family: TT Norms;
+      font-family: 'TTNorms';
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
@@ -376,7 +389,7 @@
       margin-bottom: 1%;
     }
     #listCredentials {
-      font-family: TT Norms;
+      font-family: 'TTNorms';
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
