style: align items

--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -30,7 +30,7 @@
           <p class="nameClient" id="nameClient"></p>
         </div>
         <hr style="border: 1px solid #D9D5E4;" />
-        <ul style="margin-left: 15%" id="listCredentials"></ul>
+        <ul style="margin-left: 12%" id="listCredentials"></ul>
       </div>
       
         <div class="footerLeftA">
@@ -381,12 +381,14 @@
       font-feature-settings: 'liga' off;
       color: #7B788A;
       margin-left: 5%;
+      margin-top: 4%;
+      vertical-align: middle;
     }
     .imageClient {
       width: 36px;
       height: 36px;
       margin-top: 2%;
-      margin-bottom: 1%;
+      vertical-align: middle;
     }
     #listCredentials {
       font-family: 'TTNorms';
