--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -208,7 +208,8 @@
       float:left; width: 50%; background: rgba(21, 26, 53, 1); height: 100vh
     }
     .rightSide {
-      float:right; width: 50%; background: #00BF71;  height: 100vh
+      float:right; width: 50%; background: #00BF71;  height: 100vh; display: flex;
+  justify-content: center;flex-direction: column;
     }
 
     @media only screen and (max-width: 768px) {
@@ -289,6 +290,30 @@
       border-radius: 2px;
       font-family: 'TTNorms';
     }
+
+   @media (min-width: 768px) and (max-width: 1024px) {
+       .title {
+      position: absolute;
+      width: 40%;
+      left: 5%;
+      top: 10%;
+    }
+    .subtitle {
+      position: absolute;
+      width: 45%;
+      left: 5%;
+      top: 40%;
+    }
+    
+    .listCredentials {
+      position: absolute;
+      width: 35%;
+      height: auto;
+      left: 5%;
+      top: 48%;
+    }
+  }
+
     @media only screen and (max-width: 768px) {
        .title{
         position: absolute;
@@ -307,13 +332,14 @@
        .listCredentials {
           position: absolute;
           width: 90%;
-          height: 20%;
+          height: auto;
           left: 5%;
           top: 50%;
           background: #F2F2F2;
           border-radius: 2px;
         }
      }
+
     .footerLeftA{
       position: absolute;
       left: 5%;
@@ -332,38 +358,54 @@
       line-height: 18px;
       color: #FFFFFF;
     }
+
+     @media (min-width: 768px) and (max-width: 1024px) {
+       .footerLeftA{
+        position: absolute;
+        left: 1%;
+        bottom: 2%;
+      }
+      .footerLeftB{
+        position: absolute;
+        left: 24%;
+        bottom: 2%;
+      }
+    }
+
     @media only screen and (max-width: 768px) {
       .footerLeftA{
         text-align: center;
         left: 20%;
-        bottom: 15%;
+        margin-bottom: 40px;
       }
       .footerLeftB{
-        position: absolute;
         left: 15%;
-        bottom: 5%;
       }
     }
 
     .qrImage {
-      position: absolute;
-      left: 65%;
-      top: 30%;
+      display: block;
+      margin: auto;
     }
     .footerRight{
       position: absolute;
       left: 65%;
       bottom: 5%;
-      display: flex;
+      display:flex;
       flex-direction: row;
-      width: 20%;
+      width: 25%;
     }
 
     .imageApp {
       width: 24px;
       height: 43px;
       margin-right: 8%;
-      margin-top: 1%;
+      margin-top: 3%;
+    }
+    @media (min-width: 768px) and (max-width: 1024px) {
+       .imageApp {
+          margin-top: 8%;
+        }
     }
 
     .listCredentialsTitle{
