--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -32,7 +32,6 @@
         <hr style="border: 1px solid #D9D5E4;" />
         <ul style="margin-left: 12%" id="listCredentials"></ul>
       </div>
-      
         <div class="footerLeftA">
           <p class="footerText">You don't have the application yet? <br> Download it from your shop</p>
         </div>
@@ -314,7 +313,7 @@
     }
   }
 
-    @media only screen and (max-width: 768px) {
+    @media only screen and (min-height: 640px) and (max-width: 768px) {
        .title{
         position: absolute;
         width: 90%;
@@ -340,6 +339,34 @@
         }
      }
 
+    @media only screen and (max-height: 640px) and (max-width: 768px)  {
+       .title{
+        position: absolute;
+        width: 96%;
+        left: 2%;
+        top: 12%;
+        text-align: center;
+        font-size: 40px;
+       }
+       .subtitle{
+        position: absolute;
+        width: 96%;
+        left: 2%;
+        top: 40%;
+        text-align: center;
+        font-size: 14px;
+       }
+       .listCredentials {
+          position: absolute;
+          width: 92%;
+          height: auto;
+          left: 4%;
+          top: 52%;
+          background: #F2F2F2;
+          border-radius: 2px;
+        }
+     }
+
     .footerLeftA{
       position: absolute;
       left: 5%;
@@ -360,6 +387,7 @@
     }
 
      @media (min-width: 768px) and (max-width: 1024px) {
+
        .footerLeftA{
         position: absolute;
         left: 1%;
@@ -373,13 +401,21 @@
     }
 
     @media only screen and (max-width: 768px) {
+      
       .footerLeftA{
+        position: absolute;
+        bottom: 8%;
+        left: 10%;
+        width:80%;
         text-align: center;
-        left: 20%;
-        margin-bottom: 40px;
+        
       }
       .footerLeftB{
-        left: 15%;
+        position: absolute;
+        bottom: 1%;
+        left: 10%;
+        width:80%;
+        text-align: center;
       }
     }
 
