--- a/packages/identity-consent/views/index.hbs
+++ b/packages/identity-consent/views/index.hbs
@@ -288,6 +288,7 @@
       background: #F2F2F2;
       border-radius: 2px;
       font-family: 'TTNorms';
+      margin-top: 2%;
     }
 
    @media (min-width: 768px) and (max-width: 1024px) {
